--- a/css/inciosesion.css
+++ b/css/inciosesion.css
@@ -6,11 +6,16 @@ body {
 }
 .header-blue{
     background: #181818;
+	border-radius: 20px 20px 0 0;
 }
 
-hgroup { 
+header {
+    display: flex;
+	align-items: center;
+	justify-content: center;
 	text-align:center;
-	margin-top: 4em;
+	cursor: pointer;
+	padding: 20px 0 0 0 ;
 }
 
 h1, span { font-weight: 300; }
@@ -60,8 +65,8 @@ label {
 	font-weight: normal;
 	position: absolute;
 	pointer-events: none;
-	left: 5px;
-	top: 10px;
+	left: 18px;
+	top: 12px;
 	transition: all 0.2s ease;
 }
 
@@ -70,7 +75,7 @@ label {
 
 input:focus ~ label, input.used ~ label {
 	top: -20px;
-  transform: scale(.75); left: -2px;
+  transform: scale(.75); left: 2px;
 	/* font-size: 14px; */
 	color: #4a89dc;
 }
