--- a/css/inciosesion.css
+++ b/css/inciosesion.css
@@ -319,3 +319,32 @@ footer img:focus,
 footer a:focus {
 	outline: none;
 }
+/* Responsive Styles for Mobile*/
+@media (max-width: 768px){
+	form {
+        width: 90%; 
+    }
+
+    input {
+        padding-inline-start: 10px; 
+    }
+
+    .olvidopassword {
+        margin-left: 0;
+        margin-top: 10px; 
+    }
+
+    .button {
+        margin-top: 10px;
+    }
+}
+/* Responsive Styles for Tablet Devices */
+@media (min-width: 769px) and (max-width: 1024px){
+	form {
+        width: 70%; /* Adjust width for tablet screens */
+    }
+
+    input {
+        padding-inline-start: 150px; /* Adjust padding for tablet screens */
+    }
+}
